Nansus16_11_18/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> PRGM ID main_quad add_program_function EOS program_prime
Rule 2     program_prime -> vars program_prime
Rule 3     program_prime -> program_second_prime
Rule 4     program_second_prime -> modules program_second_prime
Rule 5     program_second_prime -> MAIN program_third_prime
Rule 6     program_third_prime -> vars program_third_prime
Rule 7     program_third_prime -> body END
Rule 8     main_quad -> <empty>
Rule 9     add_program_function -> <empty>
Rule 10    vars -> type vars_prime vars_fourth_prime
Rule 11    vars_prime -> ID save_id vars_second_prime
Rule 12    save_id -> <empty>
Rule 13    vars_second_prime -> change_dimension LEFTB exp RIGHTB vars_third_prime
Rule 14    vars_second_prime -> <empty>
Rule 15    change_dimension -> <empty>
Rule 16    vars_third_prime -> LEFTB exp RIGHTB
Rule 17    vars_third_prime -> <empty>
Rule 18    vars_fourth_prime -> SEPARATOR store_variable vars_prime vars_fourth_prime
Rule 19    vars_fourth_prime -> store_variable vars_fifth_prime
Rule 20    store_variable -> <empty>
Rule 21    vars_fifth_prime -> EOS
Rule 22    type -> TYPEINT
Rule 23    type -> TYPEFLOAT
Rule 24    type -> TYPECHAR
Rule 25    body -> statement EOS body_prime
Rule 26    body_prime -> body
Rule 27    body_prime -> <empty>
Rule 28    modules -> FUNCTION modules_prime ID LEFTP modules_second_prime
Rule 29    modules_prime -> type
Rule 30    modules_prime -> NOTYPE
Rule 31    modules_second_prime -> type ID modules_third_prime
Rule 32    modules_third_prime -> SEPARATOR modules_second_prime
Rule 33    modules_third_prime -> RIGHTP LEFTBRACE modules_fourth_prime
Rule 34    modules_fourth_prime -> vars modules_fourth_prime
Rule 35    modules_fourth_prime -> body RIGHTBRACE
Rule 36    push_operand -> <empty>
Rule 37    push_operator -> <empty>
Rule 38    statement -> assignment
Rule 39    statement -> print
Rule 40    statement -> functioncall
Rule 41    statement -> condition
Rule 42    statement -> specialfunction
Rule 43    increment -> ID increment_prime
Rule 44    increment_prime -> EQUALS increment_second_prime
Rule 45    increment_prime -> INCREMENT
Rule 46    increment_second_prime -> CSTI PLUS ID
Rule 47    increment_second_prime -> ID PLUS CSTI
Rule 48    assignment -> ID assignment_prime EQUALS push_operator expression
Rule 49    assignment_prime -> <empty>
Rule 50    assignment_prime -> LEFTB exp RIGHTB assignment_second_prime
Rule 51    assignment_second_prime -> <empty>
Rule 52    assignment_second_prime -> LEFTB exp RIGHTB
Rule 53    eval_assignment -> <empty>
Rule 54    condition -> WHILE LEFTP compoundexp RIGHTP LEFTBRACE body RIGHTBRACE
Rule 55    condition -> FOR LEFTP assignment condition_prime
Rule 56    condition -> IF condition_second_prime
Rule 57    condition_prime -> SEPARATOR assignment condition_prime
Rule 58    condition_prime -> EOS compoundexp EOS increment RIGHTP LEFTBRACE body RIGHTBRACE
Rule 59    condition_second_prime -> LEFTP compoundexp RIGHTP condition_third_prime
Rule 60    condition_third_prime -> statement condition_fourth_prime
Rule 61    condition_third_prime -> LEFTBRACE body RIGHTBRACE condition_fourth_prime
Rule 62    condition_fourth_prime -> ELSEIF condition_second_prime
Rule 63    condition_fourth_prime -> ELSE condition_fifth_prime
Rule 64    condition_fourth_prime -> <empty>
Rule 65    condition_fifth_prime -> statement
Rule 66    condition_fifth_prime -> LEFTB body RIGHTB
Rule 67    functioncall -> ID LEFTP fake_bottom exp functioncall_prime
Rule 68    functioncall_prime -> SEPARATOR exp functioncall_prime
Rule 69    functioncall_prime -> RIGHTP pop_fake_bottom
Rule 70    expression -> exp expression_prime
Rule 71    expression_prime -> GREATER exp expression_prime
Rule 72    expression_prime -> LESS exp expression_prime
Rule 73    expression_prime -> EQUAL exp expression_prime
Rule 74    expression_prime -> NOTEQUAL exp expression_prime
Rule 75    expression_prime -> GREATEREQUAL exp expression_prime
Rule 76    expression_prime -> LESSEQUAL exp expression_prime
Rule 77    expression_prime -> <empty>
Rule 78    print -> PRINT LEFTP print_prime
Rule 79    print_prime -> RIGHTP
Rule 80    print_prime -> expression RIGHTP
Rule 81    exp -> term exp_prime
Rule 82    exp_prime -> PLUS term exp_prime
Rule 83    exp_prime -> MINUS term exp_prime
Rule 84    exp_prime -> <empty>
Rule 85    operand -> CSTI evaluate_operation_int
Rule 86    operand -> CSTF evaluate_operation_float
Rule 87    operand -> ID operand_prime
Rule 88    evaluate_operation_int -> <empty>
Rule 89    evaluate_operation_float -> <empty>
Rule 90    operand_prime -> LEFTB exp RIGHTB operand_second_prime
Rule 91    operand_prime -> LEFTP exp operand_third_prime
Rule 92    operand_prime -> <empty>
Rule 93    operand_second_prime -> <empty>
Rule 94    operand_second_prime -> LEFTB exp RIGHTB
Rule 95    operand_third_prime -> SEPARATOR exp operand_third_prime
Rule 96    operand_third_prime -> RIGHTP
Rule 97    term -> factor term_prime
Rule 98    term_prime -> MULTIPLY factor term_prime
Rule 99    term_prime -> DIVIDE factor term_prime
Rule 100   term_prime -> <empty>
Rule 101   factor -> LEFTP fake_bottom expression RIGHTP pop_fake_bottom
Rule 102   factor -> operand
Rule 103   factor -> PLUS operand
Rule 104   factor -> MINUS operand
Rule 105   fake_bottom -> <empty>
Rule 106   pop_fake_bottom -> <empty>
Rule 107   specialfunction -> JEDO POINT specialfunction_prime
Rule 108   specialfunction_prime -> CIRCLE LEFTP exp RIGHTP
Rule 109   specialfunction_prime -> SQUARE LEFTP exp SEPARATOR exp RIGHTP
Rule 110   specialfunction_prime -> RECTANGLE LEFTP exp SEPARATOR exp RIGHTP
Rule 111   specialfunction_prime -> FORWARD LEFTP exp RIGHTP
Rule 112   specialfunction_prime -> BACK LEFTP exp RIGHTP
Rule 113   specialfunction_prime -> TURNRIGHT LEFTP exp RIGHTP
Rule 114   specialfunction_prime -> TURNLEFT LEFTP exp RIGHTP
Rule 115   specialfunction_prime -> COLOR LEFTP exp SEPARATOR exp SEPARATOR exp RIGHTP
Rule 116   specialfunction_prime -> ARCH LEFTP exp RIGHTP
Rule 117   specialfunction_prime -> LINE LEFTP exp SEPARATOR exp RIGHTP
Rule 118   specialfunction_prime -> THICKNESS LEFTP exp RIGHTP
Rule 119   compoundexp -> expression compoundexp_prime
Rule 120   compoundexp_prime -> AND compoundexp
Rule 121   compoundexp_prime -> OR compoundexp
Rule 122   compoundexp_prime -> <empty>

Terminals, with rules where they appear

AND                  : 120
ARCH                 : 116
BACK                 : 112
CIRCLE               : 108
COLOR                : 115
CSTF                 : 86
CSTI                 : 46 47 85
DIVIDE               : 99
ELSE                 : 63
ELSEIF               : 62
END                  : 7
EOS                  : 1 21 25 58 58
EQUAL                : 73
EQUALS               : 44 48
FOR                  : 55
FORWARD              : 111
FUNCTION             : 28
GREATER              : 71
GREATEREQUAL         : 75
ID                   : 1 11 28 31 43 46 47 48 67 87
IF                   : 56
INCREMENT            : 45
JEDO                 : 107
LEFTB                : 13 16 50 52 66 90 94
LEFTBRACE            : 33 54 58 61
LEFTP                : 28 54 55 59 67 78 91 101 108 109 110 111 112 113 114 115 116 117 118
LESS                 : 72
LESSEQUAL            : 76
LINE                 : 117
MAIN                 : 5
MINUS                : 83 104
MULTIPLY             : 98
NOTEQUAL             : 74
NOTYPE               : 30
OR                   : 121
PLUS                 : 46 47 82 103
POINT                : 107
PRGM                 : 1
PRINT                : 78
RECTANGLE            : 110
RIGHTB               : 13 16 50 52 66 90 94
RIGHTBRACE           : 35 54 58 61
RIGHTP               : 33 54 58 59 69 79 80 96 101 108 109 110 111 112 113 114 115 116 117 118
SEPARATOR            : 18 32 57 68 95 109 110 115 115 117
SQUARE               : 109
THICKNESS            : 118
TURNLEFT             : 114
TURNRIGHT            : 113
TYPECHAR             : 24
TYPEFLOAT            : 23
TYPEINT              : 22
WHILE                : 54
error                : 

Nonterminals, with rules where they appear

add_program_function : 1
assignment           : 38 55 57
assignment_prime     : 48
assignment_second_prime : 50
body                 : 7 26 35 54 58 61 66
body_prime           : 25
change_dimension     : 13
compoundexp          : 54 58 59 120 121
compoundexp_prime    : 119
condition            : 41
condition_fifth_prime : 63
condition_fourth_prime : 60 61
condition_prime      : 55 57
condition_second_prime : 56 62
condition_third_prime : 59
eval_assignment      : 
evaluate_operation_float : 86
evaluate_operation_int : 85
exp                  : 13 16 50 52 67 68 70 71 72 73 74 75 76 90 91 94 95 108 109 109 110 110 111 112 113 114 115 115 115 116 117 117 118
exp_prime            : 81 82 83
expression           : 48 80 101 119
expression_prime     : 70 71 72 73 74 75 76
factor               : 97 98 99
fake_bottom          : 67 101
functioncall         : 40
functioncall_prime   : 67 68
increment            : 58
increment_prime      : 43
increment_second_prime : 44
main_quad            : 1
modules              : 4
modules_fourth_prime : 33 34
modules_prime        : 28
modules_second_prime : 28 32
modules_third_prime  : 31
operand              : 102 103 104
operand_prime        : 87
operand_second_prime : 90
operand_third_prime  : 91 95
pop_fake_bottom      : 69 101
print                : 39
print_prime          : 78
program              : 0
program_prime        : 1 2
program_second_prime : 3 4
program_third_prime  : 5 6
push_operand         : 
push_operator        : 48
save_id              : 11
specialfunction      : 42
specialfunction_prime : 107
statement            : 25 60 65
store_variable       : 18 19
term                 : 81 82 83
term_prime           : 97 98 99
type                 : 10 29 31
vars                 : 2 6 34
vars_fifth_prime     : 19
vars_fourth_prime    : 10 18
vars_prime           : 10 18
vars_second_prime    : 11
vars_third_prime     : 13

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . PRGM ID main_quad add_program_function EOS program_prime

    PRGM            shift and go to state 2

    program                        shift and go to state 1

state 1

    (0) S' -> program .



state 2

    (1) program -> PRGM . ID main_quad add_program_function EOS program_prime

    ID              shift and go to state 3


state 3

    (1) program -> PRGM ID . main_quad add_program_function EOS program_prime
    (8) main_quad -> .

    EOS             reduce using rule 8 (main_quad -> .)

    main_quad                      shift and go to state 4

state 4

    (1) program -> PRGM ID main_quad . add_program_function EOS program_prime
    (9) add_program_function -> .

    EOS             reduce using rule 9 (add_program_function -> .)

    add_program_function           shift and go to state 5

state 5

    (1) program -> PRGM ID main_quad add_program_function . EOS program_prime

    EOS             shift and go to state 6


state 6

    (1) program -> PRGM ID main_quad add_program_function EOS . program_prime
    (2) program_prime -> . vars program_prime
    (3) program_prime -> . program_second_prime
    (10) vars -> . type vars_prime vars_fourth_prime
    (4) program_second_prime -> . modules program_second_prime
    (5) program_second_prime -> . MAIN program_third_prime
    (22) type -> . TYPEINT
    (23) type -> . TYPEFLOAT
    (24) type -> . TYPECHAR
    (28) modules -> . FUNCTION modules_prime ID LEFTP modules_second_prime

    MAIN            shift and go to state 12
    TYPEINT         shift and go to state 13
    TYPEFLOAT       shift and go to state 14
    TYPECHAR        shift and go to state 15
    FUNCTION        shift and go to state 16

    program_prime                  shift and go to state 7
    vars                           shift and go to state 8
    program_second_prime           shift and go to state 9
    type                           shift and go to state 10
    modules                        shift and go to state 11

state 7

    (1) program -> PRGM ID main_quad add_program_function EOS program_prime .

    $end            reduce using rule 1 (program -> PRGM ID main_quad add_program_function EOS program_prime .)


state 8

    (2) program_prime -> vars . program_prime
    (2) program_prime -> . vars program_prime
    (3) program_prime -> . program_second_prime
    (10) vars -> . type vars_prime vars_fourth_prime
    (4) program_second_prime -> . modules program_second_prime
    (5) program_second_prime -> . MAIN program_third_prime
    (22) type -> . TYPEINT
    (23) type -> . TYPEFLOAT
    (24) type -> . TYPECHAR
    (28) modules -> . FUNCTION modules_prime ID LEFTP modules_second_prime

    MAIN            shift and go to state 12
    TYPEINT         shift and go to state 13
    TYPEFLOAT       shift and go to state 14
    TYPECHAR        shift and go to state 15
    FUNCTION        shift and go to state 16

    vars                           shift and go to state 8
    program_prime                  shift and go to state 17
    program_second_prime           shift and go to state 9
    type                           shift and go to state 10
    modules                        shift and go to state 11

state 9

    (3) program_prime -> program_second_prime .

    $end            reduce using rule 3 (program_prime -> program_second_prime .)


state 10

    (10) vars -> type . vars_prime vars_fourth_prime
    (11) vars_prime -> . ID save_id vars_second_prime

    ID              shift and go to state 19

    vars_prime                     shift and go to state 18

state 11

    (4) program_second_prime -> modules . program_second_prime
    (4) program_second_prime -> . modules program_second_prime
    (5) program_second_prime -> . MAIN program_third_prime
    (28) modules -> . FUNCTION modules_prime ID LEFTP modules_second_prime

    MAIN            shift and go to state 12
    FUNCTION        shift and go to state 16

    modules                        shift and go to state 11
    program_second_prime           shift and go to state 20

state 12

    (5) program_second_prime -> MAIN . program_third_prime
    (6) program_third_prime -> . vars program_third_prime
    (7) program_third_prime -> . body END
    (10) vars -> . type vars_prime vars_fourth_prime
    (25) body -> . statement EOS body_prime
    (22) type -> . TYPEINT
    (23) type -> . TYPEFLOAT
    (24) type -> . TYPECHAR
    (38) statement -> . assignment
    (39) statement -> . print
    (40) statement -> . functioncall
    (41) statement -> . condition
    (42) statement -> . specialfunction
    (48) assignment -> . ID assignment_prime EQUALS push_operator expression
    (78) print -> . PRINT LEFTP print_prime
    (67) functioncall -> . ID LEFTP fake_bottom exp functioncall_prime
    (54) condition -> . WHILE LEFTP compoundexp RIGHTP LEFTBRACE body RIGHTBRACE
    (55) condition -> . FOR LEFTP assignment condition_prime
    (56) condition -> . IF condition_second_prime
    (107) specialfunction -> . JEDO POINT specialfunction_prime

    TYPEINT         shift and go to state 13
    TYPEFLOAT       shift and go to state 14
    TYPECHAR        shift and go to state 15
    ID              shift and go to state 30
    PRINT           shift and go to state 31
    WHILE           shift and go to state 32
    FOR             shift and go to state 33
    IF              shift and go to state 34
    JEDO            shift and go to state 35

    program_third_prime            shift and go to state 21
    vars                           shift and go to state 22
    body                           shift and go to state 23
    type                           shift and go to state 10
    statement                      shift and go to state 24
    assignment                     shift and go to state 25
    print                          shift and go to state 26
    functioncall                   shift and go to state 27
    condition                      shift and go to state 28
    specialfunction                shift and go to state 29

state 13

    (22) type -> TYPEINT .

    ID              reduce using rule 22 (type -> TYPEINT .)


state 14

    (23) type -> TYPEFLOAT .

    ID              reduce using rule 23 (type -> TYPEFLOAT .)


state 15

    (24) type -> TYPECHAR .

    ID              reduce using rule 24 (type -> TYPECHAR .)


state 16

    (28) modules -> FUNCTION . modules_prime ID LEFTP modules_second_prime
    (29) modules_prime -> . type
    (30) modules_prime -> . NOTYPE
    (22) type -> . TYPEINT
    (23) type -> . TYPEFLOAT
    (24) type -> . TYPECHAR

    NOTYPE          shift and go to state 38
    TYPEINT         shift and go to state 13
    TYPEFLOAT       shift and go to state 14
    TYPECHAR        shift and go to state 15

    modules_prime                  shift and go to state 36
    type                           shift and go to state 37

state 17

    (2) program_prime -> vars program_prime .

    $end            reduce using rule 2 (program_prime -> vars program_prime .)


state 18

    (10) vars -> type vars_prime . vars_fourth_prime
    (18) vars_fourth_prime -> . SEPARATOR store_variable vars_prime vars_fourth_prime
    (19) vars_fourth_prime -> . store_variable vars_fifth_prime
    (20) store_variable -> .

    SEPARATOR       shift and go to state 40
    EOS             reduce using rule 20 (store_variable -> .)

    vars_fourth_prime              shift and go to state 39
    store_variable                 shift and go to state 41

state 19

    (11) vars_prime -> ID . save_id vars_second_prime
    (12) save_id -> .

    LEFTB           reduce using rule 12 (save_id -> .)
    SEPARATOR       reduce using rule 12 (save_id -> .)
    EOS             reduce using rule 12 (save_id -> .)

    save_id                        shift and go to state 42

state 20

    (4) program_second_prime -> modules program_second_prime .

    $end            reduce using rule 4 (program_second_prime -> modules program_second_prime .)


state 21

    (5) program_second_prime -> MAIN program_third_prime .

    $end            reduce using rule 5 (program_second_prime -> MAIN program_third_prime .)


state 22

    (6) program_third_prime -> vars . program_third_prime
    (6) program_third_prime -> . vars program_third_prime
    (7) program_third_prime -> . body END
    (10) vars -> . type vars_prime vars_fourth_prime
    (25) body -> . statement EOS body_prime
    (22) type -> . TYPEINT
    (23) type -> . TYPEFLOAT
    (24) type -> . TYPECHAR
    (38) statement -> . assignment
    (39) statement -> . print
    (40) statement -> . functioncall
    (41) statement -> . condition
    (42) statement -> . specialfunction
    (48) assignment -> . ID assignment_prime EQUALS push_operator expression
    (78) print -> . PRINT LEFTP print_prime
    (67) functioncall -> . ID LEFTP fake_bottom exp functioncall_prime
    (54) condition -> . WHILE LEFTP compoundexp RIGHTP LEFTBRACE body RIGHTBRACE
    (55) condition -> . FOR LEFTP assignment condition_prime
    (56) condition -> . IF condition_second_prime
    (107) specialfunction -> . JEDO POINT specialfunction_prime

    TYPEINT         shift and go to state 13
    TYPEFLOAT       shift and go to state 14
    TYPECHAR        shift and go to state 15
    ID              shift and go to state 30
    PRINT           shift and go to state 31
    WHILE           shift and go to state 32
    FOR             shift and go to state 33
    IF              shift and go to state 34
    JEDO            shift and go to state 35

    vars                           shift and go to state 22
    program_third_prime            shift and go to state 43
    body                           shift and go to state 23
    type                           shift and go to state 10
    statement                      shift and go to state 24
    assignment                     shift and go to state 25
    print                          shift and go to state 26
    functioncall                   shift and go to state 27
    condition                      shift and go to state 28
    specialfunction                shift and go to state 29

state 23

    (7) program_third_prime -> body . END

    END             shift and go to state 44


state 24

    (25) body -> statement . EOS body_prime

    EOS             shift and go to state 45


state 25

    (38) statement -> assignment .

    EOS             reduce using rule 38 (statement -> assignment .)
    ELSEIF          reduce using rule 38 (statement -> assignment .)
    ELSE            reduce using rule 38 (statement -> assignment .)


state 26

    (39) statement -> print .

    EOS             reduce using rule 39 (statement -> print .)
    ELSEIF          reduce using rule 39 (statement -> print .)
    ELSE            reduce using rule 39 (statement -> print .)


state 27

    (40) statement -> functioncall .

    EOS             reduce using rule 40 (statement -> functioncall .)
    ELSEIF          reduce using rule 40 (statement -> functioncall .)
    ELSE            reduce using rule 40 (statement -> functioncall .)


state 28

    (41) statement -> condition .

    EOS             reduce using rule 41 (statement -> condition .)
    ELSEIF          reduce using rule 41 (statement -> condition .)
    ELSE            reduce using rule 41 (statement -> condition .)


state 29

    (42) statement -> specialfunction .

    EOS             reduce using rule 42 (statement -> specialfunction .)
    ELSEIF          reduce using rule 42 (statement -> specialfunction .)
    ELSE            reduce using rule 42 (statement -> specialfunction .)


state 30

    (48) assignment -> ID . assignment_prime EQUALS push_operator expression
    (67) functioncall -> ID . LEFTP fake_bottom exp functioncall_prime
    (49) assignment_prime -> .
    (50) assignment_prime -> . LEFTB exp RIGHTB assignment_second_prime

    LEFTP           shift and go to state 47
    EQUALS          reduce using rule 49 (assignment_prime -> .)
    LEFTB           shift and go to state 48

    assignment_prime               shift and go to state 46

state 31

    (78) print -> PRINT . LEFTP print_prime

    LEFTP           shift and go to state 49


state 32

    (54) condition -> WHILE . LEFTP compoundexp RIGHTP LEFTBRACE body RIGHTBRACE

    LEFTP           shift and go to state 50


state 33

    (55) condition -> FOR . LEFTP assignment condition_prime

    LEFTP           shift and go to state 51


state 34

    (56) condition -> IF . condition_second_prime
    (59) condition_second_prime -> . LEFTP compoundexp RIGHTP condition_third_prime

    LEFTP           shift and go to state 53

    condition_second_prime         shift and go to state 52

state 35

    (107) specialfunction -> JEDO . POINT specialfunction_prime

    POINT           shift and go to state 54


state 36

    (28) modules -> FUNCTION modules_prime . ID LEFTP modules_second_prime

    ID              shift and go to state 55


state 37

    (29) modules_prime -> type .

    ID              reduce using rule 29 (modules_prime -> type .)


state 38

    (30) modules_prime -> NOTYPE .

    ID              reduce using rule 30 (modules_prime -> NOTYPE .)


state 39

    (10) vars -> type vars_prime vars_fourth_prime .

    MAIN            reduce using rule 10 (vars -> type vars_prime vars_fourth_prime .)
    TYPEINT         reduce using rule 10 (vars -> type vars_prime vars_fourth_prime .)
    TYPEFLOAT       reduce using rule 10 (vars -> type vars_prime vars_fourth_prime .)
    TYPECHAR        reduce using rule 10 (vars -> type vars_prime vars_fourth_prime .)
    FUNCTION        reduce using rule 10 (vars -> type vars_prime vars_fourth_prime .)
    ID              reduce using rule 10 (vars -> type vars_prime vars_fourth_prime .)
    PRINT           reduce using rule 10 (vars -> type vars_prime vars_fourth_prime .)
    WHILE           reduce using rule 10 (vars -> type vars_prime vars_fourth_prime .)
    FOR             reduce using rule 10 (vars -> type vars_prime vars_fourth_prime .)
    IF              reduce using rule 10 (vars -> type vars_prime vars_fourth_prime .)
    JEDO            reduce using rule 10 (vars -> type vars_prime vars_fourth_prime .)


state 40

    (18) vars_fourth_prime -> SEPARATOR . store_variable vars_prime vars_fourth_prime
    (20) store_variable -> .

    ID              reduce using rule 20 (store_variable -> .)

    store_variable                 shift and go to state 56

state 41

    (19) vars_fourth_prime -> store_variable . vars_fifth_prime
    (21) vars_fifth_prime -> . EOS

    EOS             shift and go to state 58

    vars_fifth_prime               shift and go to state 57

state 42

    (11) vars_prime -> ID save_id . vars_second_prime
    (13) vars_second_prime -> . change_dimension LEFTB exp RIGHTB vars_third_prime
    (14) vars_second_prime -> .
    (15) change_dimension -> .

    SEPARATOR       reduce using rule 14 (vars_second_prime -> .)
    EOS             reduce using rule 14 (vars_second_prime -> .)
    LEFTB           reduce using rule 15 (change_dimension -> .)

    vars_second_prime              shift and go to state 59
    change_dimension               shift and go to state 60

state 43

    (6) program_third_prime -> vars program_third_prime .

    $end            reduce using rule 6 (program_third_prime -> vars program_third_prime .)


state 44

    (7) program_third_prime -> body END .

    $end            reduce using rule 7 (program_third_prime -> body END .)


state 45

    (25) body -> statement EOS . body_prime
    (26) body_prime -> . body
    (27) body_prime -> .
    (25) body -> . statement EOS body_prime
    (38) statement -> . assignment
    (39) statement -> . print
